Move opens directive to module-info